# ChangeLog for dev-cpp/libxmlpp
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.133 2015/03/22 20:08:22 tetromino Exp $

*libxmlpp-2.36.0-r1 (22 Mar 2015)

  22 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  +libxmlpp-2.36.0-r1.ebuild:
  Add multilib support (bug #469180, thanks to Karl Lindén). Install docs
  where upstream expects so other *pp docs can link to them.

  22 Jun 2014; Markus Meier <maekke@gentoo.org> libxmlpp-2.36.0.ebuild:
  add ~arm, bug #511566

  12 Oct 2013; Pacho Ramos <pacho@gentoo.org> -files/libxmlpp-1.0.5-gcc43.patch,
  -libxmlpp-1.0.5.ebuild, -libxmlpp-2.34.2.ebuild:
  Drop old

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for alpha, wrt bug #458984

  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for ia64, wrt bug #458984

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for ppc64, wrt bug #458984

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for ppc, wrt bug #458984

  26 Mar 2013; Jeroen Roovers <jer@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for HPPA (bug #458984).

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for amd64, wrt bug #458984

*libxmlpp-2.36.0 (24 Nov 2012)

  24 Nov 2012; Gilles Dartiguelongue <eva@gentoo.org> +libxmlpp-2.36.0.ebuild:
  Version bump. Bump to EAPI 5. Examples are now tests as well and handled
  accordingly.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> libxmlpp-1.0.5.ebuild,
  libxmlpp-2.34.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig
