@@ -2,26 +2,16 @@
 Hash: SHA256
 
 DIST libxml++-2.36.0.tar.xz 861456 SHA256 bfdf327bf9ebd12946b7aa6a152045f209d5c9fecd06ebfcdf9b3e7c1af6e2e1 SHA512 52372b3a969dc4a16d1ec70275e3c97ac20acc14703a2875ba41d1eb8fe3f318c10e02d601ceac1a0d35f47e7d7033ebd5e87c122db6b373e847d543eddbe9a6 WHIRLPOOL 19804748859cbf6144e56f1ee1746cf2b30995c70e5f74a0dd3b51b38982832a9ece6a519f43e83dca424110f98bd86e8d3d4120ce8ac59b4b837f2d4f132bba
+DIST libxml++-2.38.0.tar.xz 940844 SHA256 5698b03f5d320fb8310e30780e328f03debca12c557434ee031aea9baf3b1346 SHA512 539ea25b2e1f871dc0c06e4033659a3d6ee5bd3cb54f625ba47b0f8a8dead049602c5d28369a497c52f48f370625d5da1b187ef542fbdd2e54fd907b308cfc67 WHIRLPOOL 4056f4dedf27a6b52623bb070fc106a165d3a3f97b39e2c0f00ce2673f7901c6653c9c48ad5171b86bf8bbb9335baead8e7e0630adbefc13899dcf342c428677
 EBUILD libxmlpp-2.36.0-r1.ebuild 943 SHA256 900ce5d084b04cd0f1ff414a9506650c2f799a18e97add678407bcb11fb0216a SHA512 6563cf1d624203649da3e6499d9657ce59f61702d4c05f49bde5fd2d73abd30e6385b7482d88d5cbd985ddc2fad246a6e5e91710e67142d087f6f0f6f516bf48 WHIRLPOOL 21856fcc0ef72e52e0f3f690a3ffbfceb2a9095b111aaa56f4b3d275dd73d9f55f4170244832b0223aa3f5a51357db7852fe94aa742b9f80ac8f1e8795ce8c17
 EBUILD libxmlpp-2.36.0.ebuild 920 SHA256 539c5845676dd3d0f61af5f78ae592e4f43307914538dec7a6637b6e04e476ea SHA512 7d5a4604a9dc53210383fa7cc823e185d333b7dc837a0816d4717dc9f9411ab5bdddb27a93da529037709490d3c13fdcc8630f3e3a08ae344589d4f43379c0a3 WHIRLPOOL 2c1de0c8759e67683d6c27e21a5254b2bf556cec85f8070f01e94fc873ab0a260606349b5ebe47ab56fd30b6262257cb52c3e0b7cc0d05444fb74ccd7aac4edf
-MISC ChangeLog 18844 SHA256 8adacbfd25c29b7889291a63147e2a824cf0ebe362280e9bbae86be6202bdd3e SHA512 7ff78d35046aa209cf7b1fdb3ece95a083a19f9cf5bef630e0f962d4e12015c11f3694d90849d670c24dddc51b4e0d93ec97bc0f36e3ab09d6d9b284eee115a6 WHIRLPOOL caaf94140e2165ba78085eed4746e51a8a9f7e11465e7ebd0375231dc3a3168164ec443e5960fcb49df94f29fe699213f7cb0fbcb14a8fcf3f6075690a16e1ef
+EBUILD libxmlpp-2.38.0.ebuild 934 SHA256 d015b1ebf93d20e0b9070d2930951a962b0488a8fc23cc9a2b46336d46c5a0d7 SHA512 e8a20aac43489bcc1b635110c76f28b783f1bc7252afbecb13028623747042298da89305194e7a56ab1bf21a730e2e9168b6a402517aac95591ae431cbcf479f WHIRLPOOL b871e8bc5d8ce28522d504b0c0ae1595f2b7438adae07bffe0e223376a22c09228ddad83aa0866dea252f912630f58f5beff1893886b233cc9da305da8a828cd
+MISC ChangeLog 18966 SHA256 5dcdadcc427ee30393ae718166162415090acd5016492bf590f7e05a9db85df3 SHA512 8e2cf1f5c1c29039177bc90b9cfc688ba735d06d221bef9b1faeaba20f71a6d5a9d6d9fc59ac180f5e3112952672be87915c713b831a15406505f52d04d6b319 WHIRLPOOL a1cc593866c13fbe5ac086e1b1187bac49c829deb2ea02bbaa4d8a19a875b59cb373588ce1601fe9f44c17702e546842107de3c03ad4f7233c49bca1814beb9f
 MISC metadata.xml 162 SHA256 7d0ce82d5ca3b20cb1c4641c7b7aae7082fd6be059b85fab9699095fd965f2e9 SHA512 baf4e2f4c64ab0ecc4985c069e360293c4394ea6a87c1baed2e9e91df8dca76e2371eb4be2df5ba009beb3de9a0e02561dd01accf2645e1dc5d0a23edbd8f8b6 WHIRLPOOL 35e7795de1da836c4969acee5aac0cfef4c461b1e5dc124d7f751e46efd1c3816b70824aad884fe77258b16cf3476b92b983593089aa7c152e701d0181a0e6be
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVDyE3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
-OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyNnYIP/R1GsPE4yPfrppwFu0ZdwIf0
-l7MQi6tno9Felonvu2iwENkGoyOmv+9RzHqziShd4Tu7Unqe9+8EwybZodQzTYX0
-9/VH0bZ+cB1ji+6Qwzz57nlNHxbw0J+6zAhzGwd0nM5kPS9MwJetoU3iHoFXjt9U
-8pHwK2zgaGQtXTzccH6MbEZmaxd6IdGYRFVlhTCuBb1lbX36dXqlAI+QgK/LKpvK
-VmDjoTW2t/RPEf5ew2IcUf8NzBUUVzOyXTN6TnzMiT5z2laK8FeFw/nkShBZEOJN
-qtoYKDkuD73glLtSgNgxaivujmGGP36TG58hI7uSJDiOZbSrqIysZ2ggomY0Ku0u
-Y/0zFkUwKAZJiMjgl52zFjbJFCMEEY4blbpIb5siq8/6Mw7x4ymBwZWBg5uKV8Bj
-QObbJ8qB16r77O9zfhV0rutwnKdIRxd0GinvB37ujr1IleclX11uRXaITKEyyyGQ
-h4FjD5QCPl18/hiRPLaP+S/1auj7T5pKZTwCtsF5kqcoTGgMs8V8U3VsGuGP/sqI
-U0yHc57gAZXq9/fw/t4Qe9rEm89caEN33shXTlwI7p8+9NK/ENTgkCO1MkVJIuH4
-KvvQMrwdK+BfEsHnNhO9jhp7qClRN6rRZYOtO2zHLvmT/4k1uRSKiv8CICPSgBu8
-cAhX+mFJEHTyCLLoYVv9
-=d1BE
+iEYEAREIAAYFAlVGiYIACgkQ1fmVwcYIWAaTUwCgrULfQfXKc4KmdKNYcvTFRGQY
+GJgAoM17bIyKv/kckU3XXQOBfdUewaA8
+=T5TG
 -----END PGP SIGNATURE-----
